--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="icon" href="pharmacy 1.png">
     <title>Login/Med</title>
 </head>
@@ -35,102 +36,5 @@
                 </div>
             </section>
         </div>
-    <style>
-        *{
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-        .part1{
-            width: 50vh;
-        }
-        .part2{
-            width: 100pc;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        .content section{
-            background-color: rgb(235, 227, 224);
-            display: flex;
-            height: 100vh;
-            justify-content: center;
-            align-items: center;
-        }
-        .imagem{
-            position: relative;
-            width: 50vh;
-            height: 800px;
-        }
-        .caixaLogin{
-            background-image: url("/limpar-historico-medico_53876-97927 (1).png");
-            display: flex;
-            flex-direction: row;
-            width: 1500px;
-            height: 800px;
-        }
-        .login{
-            display: flex;
-            flex-direction: column;
-            background-color: rgb(248, 248, 248);
-            width: 900px;
-            height: 700px;
-            border-radius: 10px;
-            align-items: center;
-        }
-        .iconeMed{
-            margin-top: 50px;
-            width: 100px;
-            height: 100px;
-        }
-        .arealogin{
-            margin-top: 100px;
-            display: flex;
-            flex-direction: column;
-            gap: 50px;
-        }
-        #name{
-            height: 30px;
-            outline: 0;
-            border: none;
-            width: 400px;
-            font-size: 20px;
-            font-family: sans-serif;
-            background-color: rgb(248, 248, 248);
-            border-bottom: 1px solid rgb(89, 193, 235);
-        }
-        input::placeholder{
-            font-size: 20px;
-            font-family: sans-serif;
-        }
-        button{
-            margin-top: 80px;
-            border: none;
-            background-color:rgb(0, 183, 255);
-            color: white;
-            font-size: 20px;
-            height: 50px;
-            width: 150px;
-            border-radius: 10px;
-        }
-        button:hover{
-            cursor: pointer;
-            background-color: rgb(61, 168, 255);
-        }
-        .extra{
-            display: flex;
-            gap: 120px;
-            margin-top: 30px;
-            font-family: sans-serif;
-        }
-
-        #remember:hover{
-            cursor: pointer;
-        }
-        p:hover{
-            text-decoration: underline;
-            cursor: pointer;
-        }
-    </style>
 </body>
 </html>
